[gd_scene load_steps=4 format=3 uid="uid://wfssq6mqkmrt"]

[ext_resource type="Script" uid="uid://cryk7g02kikmi" path="res://game/scenes/programs/program.gd" id="1_57qps"]
[ext_resource type="Theme" uid="uid://cjww2dp7ckflf" path="res://game/theme.tres" id="1_evvk3"]
[ext_resource type="PackedScene" uid="uid://b3l4crsncffoh" path="res://game/scenes/elements/panel_locker.tscn" id="3_b4wpg"]

[node name="program" type="Control" node_paths=PackedStringArray("parameters_container", "execute_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_evvk3")
script = ExtResource("1_57qps")
python_script_path = "res://game/scenes/programs/program.py"
parameters_container = NodePath("panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container/parameters")
execute_button = NodePath("panel_container/margin_container/h_split_container/v_box_container/h_box_container/start_button")

[node name="panel_container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="panel_container"]
layout_mode = 2

[node name="h_split_container" type="HSplitContainer" parent="panel_container/margin_container"]
layout_mode = 2

[node name="v_box_container" type="VBoxContainer" parent="panel_container/margin_container/h_split_container"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="left_panel" type="PanelContainer" parent="panel_container/margin_container/h_split_container/v_box_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="scroll_container" type="ScrollContainer" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel"]
layout_mode = 2

[node name="margin_container" type="MarginContainer" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="parameters" type="VBoxContainer" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel/scroll_container/margin_container"]
layout_mode = 2

[node name="panel_locker" parent="panel_container/margin_container/h_split_container/v_box_container/left_panel" instance=ExtResource("3_b4wpg")]
visible = false
layout_mode = 2

[node name="h_box_container" type="HBoxContainer" parent="panel_container/margin_container/h_split_container/v_box_container"]
layout_mode = 2

[node name="start_button" type="Button" parent="panel_container/margin_container/h_split_container/v_box_container/h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="queue_button" type="Button" parent="panel_container/margin_container/h_split_container/v_box_container/h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
text = "Queue"

[node name="right_panel" type="PanelContainer" parent="panel_container/margin_container/h_split_container"]
layout_mode = 2

[node name="margin_container" type="MarginContainer" parent="panel_container/margin_container/h_split_container/right_panel"]
layout_mode = 2

[node name="close_confirmation" type="ConfirmationDialog" parent="."]
initial_position = 1
size = Vector2i(461, 132)
dialog_text = "This program is still running. Exiting now will terminate it.

You wanna?"

[connection signal="started" from="." to="panel_container/margin_container/h_split_container/v_box_container/left_panel/panel_locker" method="set_visible" binds= [true]]
[connection signal="stopped" from="." to="panel_container/margin_container/h_split_container/v_box_container/left_panel/panel_locker" method="set_visible" binds= [false]]
[connection signal="pressed" from="panel_container/margin_container/h_split_container/v_box_container/h_box_container/start_button" to="." method="_on_start_button_pressed"]
[connection signal="confirmed" from="close_confirmation" to="." method="force_close_window"]
